[1h] CSV Export for Activity log